# piwheels

./: .gitignore  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  Dockerfile  Dockerfile.initdb  Dockerfile.test  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  coverage.cfg  deploy_slave.sh  deploy_slave_0.sh  deploy_slave_0_pre.sh  deploy_slave_0_upgrade.sh  deploy_slave_1.sh  deploy_slave_2.sh  deploy_slave_3.sh  deploy_slave_jessie.sh  deploy_slave_stretch.sh  developing.md  docker-compose.yml  init-user-db.sh  install.md  piwheels-master.service  piwheels-sense.service  piwheels-slave.service  piwheels-tunnel.service  piwheelsdb-tunnel.service  piwmon-tunnel.service  pyproject.toml  requirements_bookworm.txt  requirements_bullseye.txt  requirements_buster.txt  requirements_jessie.txt  requirements_stretch.txt  rtd_requirements.txt  setup.cfg  (+4 more)
.github/: dependabot.yml  lock.yml
.github/ISSUE_TEMPLATE/: broken-package.md  config.yml  missing-package.md  package.md
.github/workflows/: test.yml
docker/: Dockerfile.docs  Dockerfile.initdb  Dockerfile.master  Dockerfile.test  Dockerfile.test-bookworm  Dockerfile.test-bullseye  Dockerfile.test-buster  Dockerfile.web  README.md  db-restore-minimal.sql  db-restore.sql  import-wheels.sh  init-user-db.sh
docker/apache/: 000-default.conf
docker/db-config/: pg_hba.conf
docs/: Makefile  add.rst  conf.py  development.rst  file_protocol.dot  import_protocol.dot  importer.rst  index.rst  initdb.rst  license.rst  logger.rst  master.rst  master_arch.dot  modules.rst  monitor.rst  overview.rst  queues.dot  rebuild.rst  remove.rst  sense.rst  slave_protocol.dot  slaves.rst
docs/images/: import_protocol.dot  master_arch.dot  slave_protocol.dot
piwheels/: __init__.py  activate_build.py  add_missing_version_number.py  auth.py  build_logs.py  builder.py  const.py  db.py  deactivate_build.py  format.py  info.py  main.py  master.py  piwheels.py  piwheels.sql  platform.py  proc.py  protocols.py  pypi.py  states.py  sync_wheels.py  systemd.py  tasks.py  terminal.py  test_runner.sh  tests.py  tools.py  transport.py  update_package_list.py  update_packages_list.py  web_index.py  web_package_page.py
piwheels/add/: __init__.py
piwheels/audit/: __init__.py  audit.py  audit_logs.py  audit_package.py  audit_packages.py  report.py
piwheels/cbor2/: encoder.py
piwheels/importer/: __init__.py
piwheels/initdb/: __init__.py  create_piwheels.sql  update_piwheels_07_to_08.sql  update_piwheels_08_to_09.sql
piwheels/initdb/sql/: create_piwheels.sql  update_piwheels_0.10_to_0.11.sql  update_piwheels_0.11_to_0.12.sql  update_piwheels_0.12_to_0.13.sql  update_piwheels_0.13_to_0.14.sql  update_piwheels_0.14_to_0.15.sql  update_piwheels_0.15_to_0.16.sql  update_piwheels_0.16_to_0.17.sql  update_piwheels_0.17_to_0.18.sql  update_piwheels_0.18_to_0.19.sql  update_piwheels_0.19_to_0.20.sql  update_piwheels_0.20_to_0.21.sql  update_piwheels_0.21_to_0.22.sql  update_piwheels_0.22_to_0.23.sql  update_piwheels_0.4_to_0.5.sql  update_piwheels_0.5_to_0.6.sql  update_piwheels_0.6_to_0.7.sql  update_piwheels_0.7_to_0.8.sql  update_piwheels_0.8_to_0.9.sql  update_piwheels_0.9_to_0.10.sql
piwheels/logger/: __init__.py  bots.py
piwheels/master/: __init__.py  big_brother.py  build_catcher.py  cli.py  cloud_gazer.py  cmdline.py  db.py  default_libs.txt  file_juggler.py  high_priest.py  html.py  index.template.html  index_scribbler.py  index_scribe.py  lumberjack.py  mr_chase.py  pypi.py  queue_stuffer.py  ranges.py  seraph.py  slave_driver.py  states.py  tasks.py  the_architect.py  the_oracle.py  the_scribe.py  the_secretary.py  version.py  web_scraper.py
piwheels/master/static/: banner.js  blogposts.js  faq.html  faq.js  homepage.js  index.html  packages.html  packages.js  project.html  project.js  shade.js  sitemap.xsl  (+4 more)
piwheels/monitor/: __init__.py  dialogs.py  lists.py  states.py  widgets.py
piwheels/rebuild/: __init__.py
piwheels/remove/: __init__.py
piwheels/sense/: __init__.py  renderers.py  states.py  tasks.py
piwheels/slave/: __init__.py  builder.py
piwheels/widgets/: __init__.py  charts.py  event_loop.py
scripts/: migrate_logs
sql/: create_piwheels.sql  update_piwheels_04_to_05.sql  update_piwheels_05_to_06.sql  update_piwheels_06_to_07.sql  update_piwheels_07_to_08.sql
tests/: conftest.py  test_cloud_gazer.py  test_db.py  test_format.py  test_info.py  test_master_big_brother.py  test_master_cloud_gazer.py  test_master_html.py  test_master_index_scribe.py  test_master_ranges.py  test_master_states.py  test_master_tasks.py  test_master_the_oracle.py  test_proc.py  test_ranges.py  test_states.py  test_systemd.py  test_tasks.py  test_terminal.py  test_the_oracle.py  test_transport.py
tests/add/: test_add.py
tests/audit/: test_audit.py  test_audit_logs.py  test_audit_packages.py  test_report.py
tests/importer/: test_importer.py
tests/initdb/: test_initdb.py
tests/logger/: test_logger.py
tests/master/: test_big_brother.py  test_cloud_gazer.py  test_db.py  test_file_juggler.py  test_index_scribe.py  test_lumberjack.py  test_master.py  test_mr_chase.py  test_pypi.py  test_ranges.py  test_seraph.py  test_slave_driver.py  test_states.py  test_tasks.py  test_the_architect.py  test_the_oracle.py  test_the_scribe.py  test_the_secretary.py  test_version.py
tests/rebuild/: test_rebuild.py
tests/remove/: test_remove.py
tests/slave/: test_builder.py  test_slave.py
(+36 files in other folders)
