[metadata]
name = piwheels
version = attr:piwheels.__version__
description = Python package repository providing wheels (pre-built binaries) for Raspberry Pi
long_description = file:README.rst
author = Ben Nuttall
author_email = ben@bennuttall.com
url = https://www.piwheels.org/
project_urls =
    Documentation = https://piwheels.readthedocs.io/
    Source Code = https://github.com/piwheels/piwheels
    Issue Tracker = https://github.com/piwheels/piwheels/issues
keywords = raspberrypi pip wheels
license = BSD-3-Clause
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python :: 3
python_requires = >=3.7

[options]
packages = find:
install_requires =
    configargparse
    pyzmq
    voluptuous
    cbor2
    python-dateutil

[options.package_data]
piwheels.master =
    templates/*.pt
    static/*.css
    static/*.js
    static/*.xsl
    static/*.png
    static/*.svg
    static/*.ico
piwheels.initdb =
    sql/*.sql

[options.extras_require]
test =
    pytest
    pytest-cov
doc =
    sphinx
    sphinx-rtd-theme
master =
    requests
    sqlalchemy>=1.4
    psycopg2
    chameleon
    simplejson
logger =
    lars
    simplejson
monitor =
    urwid
sense =
    pisense
slave =
    pip
    wheel

[options.entry_points]
console_scripts =
    piw-master = piwheels.master:main
    piw-slave = piwheels.slave:main
    piw-initdb = piwheels.initdb:main
    piw-import = piwheels.importer:main
    piw-rebuild = piwheels.rebuild:main
    piw-add = piwheels.add:main
    piw-remove = piwheels.remove:main
    piw-logger = piwheels.logger:main
    piw-monitor = piwheels.monitor.tui:main
    piw-sense = piwheels.monitor.sense:main
    piw-audit = piwheels.audit:main

[tool:pytest]
addopts = -r=sx --cov --tb=short
testpaths = tests

[coverage:run]
source = piwheels
omit = piwheels/monitor/*,piwheels/widgets/*
branch = true

[coverage:report]
ignore_errors = true
show_missing = true
exclude_lines =
    pragma: no cover
    assert False
    raise AssertionError
    raise NotImplementedError
    pass
    if __name__ == .__main__.:

[copyrights:settings]
include =
  **/*.py
  **/*.rst
exclude =
  docs/examples/*.py
  docs/license.rst
license = LICENSE.rst
preamble =
  The piwheels project
strip-preamble = false

[previewer:settings]
command = make -C docs html
html = build/html
watch =
    piwheels/**/*.py
    docs/*.rst
    docs/_static/*
